Add @angular/material and map components

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,12 +1,9 @@
 main {
-  display: flex;
+  background-color: #EEE;
   margin: 0 auto;
+  padding: 5px;
 
   @media (min-width: 800px) {
     width: 80%;
   }
-}
-
-header {
-  background-color: red;
 }
