--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -1,8 +1,9 @@
 <header>
-  <mat-toolbar color="primary">
+  <mat-toolbar>
     <mat-toolbar-row>
-      <button mat-button>Click me</button>
-      <span matBadge="4" matBadgeOverlap="false" matBadgeColor="accent">Text with a badge</span>
+      <button mat-icon-button color="primary" (click)="locate_me()">
+        <mat-icon aria-hidden="false" aria-label="Locate me icon">location_searching</mat-icon>
+      </button>
     </mat-toolbar-row>
   </mat-toolbar>
 </header>
