Implement LocateMe and pass as props

--- a/src/app/controls/controls.component.html
+++ b/src/app/controls/controls.component.html
@@ -1,7 +1,7 @@
 <header>
   <mat-toolbar class="controls-toolbar">
     <mat-toolbar-row>
-      <button id="locate-me-btn" mat-icon-button color="primary" (click)="locate_me()">
+      <button *ngIf="hasGeolocation" id="locate-me-btn" mat-icon-button color="primary" (click)="locate_me()">
         <mat-icon aria-hidden="false" aria-label="Locate me icon">location_searching</mat-icon>
       </button>
     </mat-toolbar-row>
